# Tec-Breakout

./: .gitignore  CMakeLists.txt  Doxyfile  README.md  doxygen_log.txt  main.cpp
html/: _login_8h_source.html  _read_write_8h_source.html  _socket_client_8h_source.html  _socket_server_8h_source.html  _start_client_8h_source.html  _start_server_8h_source.html  annotated.html  annotated_dup.js  ball_8h_source.html  bar_8h_source.html  brick_8h_source.html  class_ball-members.html  class_ball.html  class_ball.js  class_bar-members.html  class_bar.html  class_bar.js  class_brick-members.html  class_brick.html  class_brick.js  class_entity_s_d_l-members.html  class_entity_s_d_l.html  class_entity_s_d_l.js  class_game-members.html  class_game.html  class_game.js  class_login-members.html  class_login.html  class_login.js  class_object_s_d_l-members.html  class_object_s_d_l.html  class_object_s_d_l.js  class_player_g_u_i-members.html  class_player_g_u_i.html  class_player_g_u_i.js  class_primitive_window-members.html  class_primitive_window.html  class_primitive_window.js  class_read_write-members.html  class_read_write.html  (+55 more)
html/search/: all_0.js  all_1.js  all_11.js  all_13.js  all_14.js  all_2.js  all_3.js  all_5.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  files_0.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_7.js  functions_8.js  functions_9.js  functions_a.js  functions_c.js  pages_0.js  search.css  searchdata.js  variables_0.js  (+11 more)
latex/: _login_8h_source.tex  _read_write_8h_source.tex  _socket_client_8h_source.tex  _socket_server_8h_source.tex  _start_client_8h_source.tex  _start_server_8h_source.tex  annotated.tex  ball_8h_source.tex  bar_8h_source.tex  brick_8h_source.tex  class_ball.eps  class_ball.tex  class_bar.eps  class_bar.tex  class_brick.eps  class_brick.tex  class_entity_s_d_l.eps  class_entity_s_d_l.tex  class_game.eps  class_game.tex  class_login.tex  class_object_s_d_l.eps  class_object_s_d_l.tex  class_player_g_u_i.eps  class_player_g_u_i.tex  class_primitive_window.eps  class_primitive_window.tex  class_read_write.tex  class_socket_client.tex  class_socket_server.tex  class_start_client.tex  class_start_server.tex  class_text_s_d_l.eps  class_text_s_d_l.tex  entity__sdl_8h_source.tex  files.tex  game_8h_source.tex  hierarchy.tex  object__sdl_8h_source.tex  player__gui_8cpp.tex  (+8 more)
src/: main.cpp
src/gui/: PlayerGUI.cpp  PlayerGUI.h  ball.cpp  ball.h  bar.cpp  bar.h  brick.cpp  brick.h  entity_sdl.cpp  entity_sdl.h  example_gui.cpp  example_gui.h  game.cpp  game.h  include_sdl.h  object.cpp  object.h  objectSDL.h  object_sdl.h  player_gui.cpp  player_gui.h  primative_window.cpp  primative_window.h  primitive_window.cpp  primitive_window.h  text_sdl.cpp  text_sdl.h  window.cpp  window.h
src/logic/: example_logic.cpp  example_logic.h
src/login/: Login.cpp  Login.h  StartClient.cpp  StartClient.h  StartServer.cpp  StartServer.h  StartServerSingleton.cpp  StartServerSingleton.h
src/login/socket/: SocketClient.cpp  SocketServer.cpp  SocketServer.h
src/socket/: SocketClient.cpp  SocketClient.h  SocketServer.cpp  SocketServer.h
src/temp/: ReadWrite.cpp  ReadWrite.h
